Add last papers and talks

--- a/content/publication/gallego2024clinlinker/cite.bib
+++ b/content/publication/gallego2024clinlinker/cite.bib
@@ -1,4 +1,4 @@
-@inproceedings{gallego2024clinlinker,
+@article{gallego2024clinlinker,
   title={Clinlinker: Medical entity linking of clinical concept mentions in spanish},
   author={Gallego, Fernando and L{\'o}pez-Garc{\'\i}a, Guillermo and Gasco-S{\'a}nchez, Luis and Krallinger, Martin and Veredas, Francisco J},
   booktitle={International Conference on Computational Science},
